-Console: rewritten commands handler
-Console: rewritten helper class TmpFileNameGenerator
-Console: rewritten PdfSplit to keep file annotations
-Console: added -overwrite option to the split command
-Console: new merge type using PdfCopyFields to deal with forms
-Merge: check to use -copyfields console option 
-Split, Merge: added JHelpLabel to have help tooltips 
-New icons set
-dom4j 1.6.1
-jaxen 1.1
-iText 2.0.2

0.6 stable release 3
===================================
-Fix in PlugInsLoader.getPlugInsList
-Console: fix Bug #1641683
-Console: fix split page numbers starting from 1 and code cleaning
-Fixed log panel caret position (by Aniket Dutta)
-Merge: fix when automatically extension in destination file is set
-iText 1.4.8
-looks 2.1.1

0.6 stable release 2
===================================
-Merge: added page selection printer style (Ex. 2,6,12-19,5)
-Added tabbed panels icons
-Added French language
-GUI fixes
-New icon
-Code cleaning
-Added Win32 starter
-iText 1.4.6
-looks 2.0.4

0.6 stable release
===================================
-Console: fixed a bug if no -u option given
-Added German and Russian languages
-iText 1.4.4

0.6 beta 1
===================================
-Split: output files name now have leading zero(s) for better sorting
-Split: modified "split at this page" in "split after these pages"
-Split: now splitting a pdf file has its own thread. A progress bar shows the work done
-Split&Merge: better format for log messages
-Split&Merge: now bookmarks list is managed according with the merge action. Bug #1490115
-Merge: minor fixes
-Merge: now adding a pdf has its own thread and better user interface shows what pdfsam is doing
-Merge: now merging pdf files has its own thread. A progress bar shows the work done
-Merge: fix Bug #1529037 
-Console: fixes to prevent OutOfMemory exception while creating PdfReader
-Console: fixes in PdfSplit and PdfConcat constructors. Bug #1521679