@@ -1,0 +1,3 @@
+#Tue Jun 12 12:49:24 CEST 2007
+eclipse.preferences.version=1
+internal.default.compliance=default
