@@ -1,105 +1,153 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="PDF SAM ALL" default="pdfsame_jars" basedir=".">
-	<property name="ECLIPSE_HOME" value="F:\eclipse\eclipse_w32"/>
-    <property name="USER_NAME" value="Andrea Vacondio"/>
-    <property name="SRC_DIR" value="F:\workspace_pdfsam_basic/pdfsam-src"/>
-    <property name="PDFSAME_PROJECT_DIR" value="F:\workspace_pdfsam_basic"/>
-    <property name="LAUNCHER_PROJECT_DIR" value="${PDFSAME_PROJECT_DIR}/pdfsam-launcher"/>
+<project name="pdfsam" default="pdfsamJars" basedir=".">
+	
+    <property name="user.name" value="Andrea Vacondio"/>
+	<!-- main base dir -->
+    <property name="project.dir" value="F:\pdfsam\workspace-basic"/>
+	<!-- where source package is store-->
+	<property name="src.dir" value="F:\pdfsam\workspace-basic/pdfsam-src"/>
+    <property name="launcher.project.dir" value="${project.dir}/pdfsam-launcher"/>
 		
-    <property name="PDFSAM_PROJECT_DIR" value="/pdfsam-main"/>
-    <property name="PDFSAM_DIR" value="${PDFSAME_PROJECT_DIR}/pdfsam-main"/>
-    <property name="PDFSAM_JAR_NAME" value="pdfsam"/>
-    <property name="PDFSAM_JAR_VER" value="0.7b1"/>   
+    <property name="pdfsam.dir" value="${project.dir}/pdfsam-main"/>
+    <property name="pdfsam.classes.dir" value="${pdfsam.dir}/bin"/>
+    <property name="pdfsam.src.dir" value="${pdfsam.dir}/src"/>
+    <property name="pdfsam.jar.name" value="pdfsam"/>
+    <property name="pdfsam.jar.version" value="0.7b1"/>   
+    <property name="pdfsam.jar.dir" value="${project.dir}/pdfsam-main"/>   
  	
-    <property name="CONSOLE_PROJECT_DIR" value="/pdfsam-console"/>
-    <property name="CONSOLE_DIR" value="${PDFSAM_DIR}/lib"/>
-    <property name="CONSOLE_JAR_NAME" value="pdfsam-console"/>
-    <property name="CONSOLE_JAR_VER" value="0.7.0"/>   
+    <property name="console.dir" value="${project.dir}/pdfsam-console"/>
+    <property name="console.classes.dir" value="${console.dir}/bin"/>
+    <property name="console.src.dir" value="${console.dir}/src"/>
+    <property name="console.jar.dir" value="${pdfsam.dir}/lib"/>
+    <property name="console.jar.name" value="pdfsam-console"/>
+    <property name="console.jar.version" value="0.7.0"/>   
 	
-    <property name="MERGE_PROJECT_DIR" value="/pdfsam-merge"/>
-    <property name="MERGE_DIR" value="${PDFSAM_DIR}/plugins/merge"/>
-    <property name="MERGE_JAR_NAME" value="pdfsam-merge"/>
-    <property name="MERGE_JAR_VER" value="0.4.9"/>
+    <property name="merge.dir" value="${project.dir}/pdfsam-merge"/>
+    <property name="merge.classes.dir" value="${merge.dir}/bin"/>
+    <property name="merge.src.dir" value="${merge.dir}/src"/>
+    <property name="merge.jar.dir" value="${pdfsam.dir}/plugins/merge"/>
+    <property name="merge.jar.name" value="pdfsam-merge"/>
+    <property name="merge.jar.version" value="0.4.9"/>
 	
-    <property name="SPLIT_PROJECT_DIR" value="/pdfsam-split"/>
-    <property name="SPLIT_DIR" value="${PDFSAM_DIR}/plugins/split"/>
-    <property name="SPLIT_JAR_NAME" value="pdfsam-split"/>
-    <property name="SPLIT_JAR_VER" value="0.3.0"/>
+    <property name="split.dir" value="${project.dir}/pdfsam-split"/>
+    <property name="split.classes.dir" value="${split.dir}/bin"/>
+    <property name="split.src.dir" value="${split.dir}/src"/>
+    <property name="split.jar.dir" value="${pdfsam.dir}/plugins/split"/>
+    <property name="split.jar.name" value="pdfsam-split"/>
+    <property name="split.jar.version" value="0.3.0"/>
 
 	<path id="project.classpath">
         <pathelement location="."/>
     </path>
-	<target name="pdfsam_jars" description="generate the jars file" >
-		<jar destfile="${PDFSAM_DIR}/${PDFSAM_JAR_NAME}-${PDFSAM_JAR_VER}.jar" 
-	    	 basedir="${PDFSAME_PROJECT_DIR}${PDFSAM_PROJECT_DIR}"
-	    	 excludesfile="standard-excludes.txt"
-	    	 excludes="doc/**,plugins/**,lib/**,.settings,.classpath,install.nsi,config.xml,build.xml,.project,src-standard-excludes.txt,pdfsam-starter.exe,standard-excludes.txt">
+	
+	<!-- delete old pdfsam jar -->
+	<target name="deleteOld" description="delete old pdfsam jar" >
+		<delete file="${pdfsam.dir}/${pdfsam.jar.name}-${pdfsam.jar.version}.jar" />
+	</target>
+	
+	
+	<target name="pdfsamJars" depends="deleteOld" description="generate jars file" >
+		<!-- pdfsam jar-->
+		<jar destfile="${pdfsam.dir}/${pdfsam.jar.name}-${pdfsam.jar.version}.jar">
 	    	<manifest>
-			    <attribute name="Built-By" value="${USER_NAME}"/>
+			    <attribute name="Built-By" value="${user.name}"/>
 		        <attribute name="Main-Class" value="it.pdfsam.GUI.MainGUI"/>
-		        <attribute name="Class-Path" value="lib/pdfsam-langpack.jar lib/looks-2.1.1.jar lib/jcmdline-1.0.3.jar lib/itext-2.0.2.jar lib/dom4j-1.6.1.jar lib/jaxen-1.1.jar lib/${CONSOLE_JAR_NAME}-${CONSOLE_JAR_VER}.jar"/>
+		        <attribute name="Class-Path" value="lib/pdfsam-langpack.jar lib/looks-2.1.1.jar lib/jcmdline-1.0.3.jar lib/itext-2.0.2.jar lib/dom4j-1.6.1.jar lib/jaxen-1.1.jar lib/${console.jar.name}-${console.jar.version}.jar"/>
 		    </manifest>
+			<fileset dir="${pdfsam.classes.dir}">
+				<include name="**/*.class"/>
+			</fileset>	 
+		    <fileset dir="${pdfsam.dir}">
+			    <include name="**/images/*.png"/>
+	   	   </fileset> 
 	    </jar>
-	    <jar destfile="${CONSOLE_DIR}/${CONSOLE_JAR_NAME}-${CONSOLE_JAR_VER}.jar" 
-	    	 basedir="${PDFSAME_PROJECT_DIR}${CONSOLE_PROJECT_DIR}"
-	    	 excludesfile="standard-excludes.txt"
-	    	 excludes=".classpath,.settings,.project">
+		
+		<!-- console jar -->
+	    <jar destfile="${console.jar.dir}/${console.jar.name}-${console.jar.version}.jar">
 	    	<manifest>
 			    <attribute name="Built-By" value="${user.name}"/>
 		        <attribute name="Main-Class" value="it.pdfsam.console.MainConsole"/>
 	    		<attribute name="Class-Path" value="jcmdline-1.0.3.jar itext-2.0.2.jar dom4j-1.6.1.jar jaxen-1.1.jar"/>
 		    </manifest>
+			<fileset dir="${console.classes.dir}">
+				<include name="**/*.class"/>
+			</fileset>
 	    </jar>	
-	    <jar destfile="${MERGE_DIR}/${MERGE_JAR_NAME}-${MERGE_JAR_VER}.jar" 
-	    	 basedir="${PDFSAME_PROJECT_DIR}${MERGE_PROJECT_DIR}"
-	    	 excludesfile="standard-excludes.txt"
-	    	 excludes=".classpath,.project">
+		
+		<!-- merge jar -->
+	    <jar destfile="${merge.jar.dir}/${merge.jar.name}-${merge.jar.version}.jar">
 	    	<manifest>
-			    <attribute name="Built-By" value="${USER_NAME}"/>
+			    <attribute name="Built-By" value="${user.name}"/>
 		        <attribute name="Main-Class" value="it.pdfsam.plugin.merge.GUI.MergeMainGUI"/>
 		    </manifest>
+			<fileset dir="${merge.classes.dir}">
+				<include name="**/*.class"/>
+			</fileset>
+			<fileset dir="${merge.dir}">
+			    <include name="**/images/*.png"/>
+	   	   </fileset> 
 	    </jar>
-	    <jar destfile="${SPLIT_DIR}/${SPLIT_JAR_NAME}-${SPLIT_JAR_VER}.jar" 
-	    	 basedir="${PDFSAME_PROJECT_DIR}${SPLIT_PROJECT_DIR}"
-	    	 excludesfile="standard-excludes.txt"
-	    	 excludes=".classpath,.project">
+		
+		<!-- split jar -->
+	    <jar destfile="${split.jar.dir}/${split.jar.name}-${split.jar.version}.jar">
 	    	<manifest>
-			    <attribute name="Built-By" value="${USER_NAME}"/>
+			    <attribute name="Built-By" value="${user.name}"/>
 		        <attribute name="Main-Class" value="it.pdfsam.plugin.split.GUI.SplitMainGUI"/>
 		    </manifest>
+			<fileset dir="${split.classes.dir}">
+				<include name="**/*.class"/>
+			</fileset>
+			<fileset dir="${split.dir}">
+			    <include name="**/images/*.png"/>
+	   	   </fileset>
 	    </jar>
 	</target>
-	<target name="zip_sources" description="generate the zip sources file" >	
-		<zip destfile="${SRC_DIR}/${PDFSAM_JAR_NAME}-${PDFSAM_JAR_VER}-src.zip" 
-	    	 basedir="${PDFSAME_PROJECT_DIR}${PDFSAM_PROJECT_DIR}"
-	    	 excludesfile="src-standard-excludes.txt"
-	    	 excludes="doc/**,plugins/**,lib/**,gnu/**,.settings,.classpath,install.nsi,config.xml,build.xml,.project,src-standard-excludes.txt,standard-excludes.txt">
+	
+	<!-- zip projects into single archives -->
+	<target name="zipSources" description="generate zip sources packages" >
+		
+		<zip destfile="${src.dir}/${pdfsam.jar.name}-${pdfsam.jar.version}-src.zip">
+			<fileset dir="${pdfsam.src.dir}">
+				    <include name="**/*.java"/>
+			</fileset>
 	    </zip>		
-		<zip destfile="${SRC_DIR}/${SPLIT_JAR_NAME}-${SPLIT_JAR_VER}-src.zip" 
-	    	 basedir="${PDFSAME_PROJECT_DIR}${SPLIT_PROJECT_DIR}"
-	    	 excludesfile="src-standard-excludes.txt"
-	    	 excludes=".classpath,.project">
+		<zip destfile="${src.dir}/${split.jar.name}-${split.jar.version}-src.zip">
+			<fileset dir="${split.src.dir}">
+				    <include name="**/*.java"/>
+			</fileset>
 	    </zip>		
-		<zip destfile="${SRC_DIR}/${MERGE_JAR_NAME}-${MERGE_JAR_VER}-src.zip" 
-	    	 basedir="${PDFSAME_PROJECT_DIR}${MERGE_PROJECT_DIR}"
-	    	 excludesfile="src-standard-excludes.txt"
-	    	 excludes=".classpath,.project">
+		<zip destfile="${src.dir}/${merge.jar.name}-${merge.jar.version}-src.zip">
+			<fileset dir="${merge.src.dir}">
+				    <include name="**/*.java"/>
+			</fileset>
 	    </zip>		
-		<zip destfile="${SRC_DIR}/${CONSOLE_JAR_NAME}-${CONSOLE_JAR_VER}-src.zip" 
-	    	 basedir="${PDFSAME_PROJECT_DIR}${CONSOLE_PROJECT_DIR}"
-	    	 excludesfile="src-standard-excludes.txt"
-	    	 excludes=".classpath,.project">
+		<zip destfile="${src.dir}/${console.jar.name}-${console.jar.version}-src.zip">
+			<fileset dir="${console.src.dir}">
+				    <include name="**/*.java"/>
+			</fileset>
 	    </zip>		
-		<zip destfile="${SRC_DIR}/launcher-src.zip" 
-	    	 basedir="${LAUNCHER_PROJECT_DIR}">
+		<zip destfile="${src.dir}/launcher-src.zip" 
+	    	 basedir="${launcher.project.dir}">
 	    </zip>		
-		<zip destfile="${SRC_DIR}/install_nsi.zip" 
-	    	 basedir="${PDFSAME_PROJECT_DIR}${PDFSAM_PROJECT_DIR}"
-	    	 includes="*.nsi">
-	    </zip>		
-		<zip destfile="${SRC_DIR}/${PDFSAM_JAR_NAME}-${PDFSAM_JAR_VER}-out-src.zip" 
-	    	 basedir="${SRC_DIR}"
-	    	 includes="${MIX_JAR_NAME}-${MIX_JAR_VER}-src.zip,${ENCRYPT_JAR_NAME}-${ENCRYPT_JAR_VER}-src.zip,${CONSOLE_JAR_NAME}-${CONSOLE_JAR_VER}-src.zip,${MERGE_JAR_NAME}-${MERGE_JAR_VER}-src.zip,${COVER_JAR_NAME}-${COVER_JAR_VER}-src.zip,${SPLIT_JAR_NAME}-${SPLIT_JAR_VER}-src.zip,launcher-src.zip,${PDFSAM_JAR_NAME}-${PDFSAM_JAR_VER}-src.zip,install_nsi.zip">
-	    </zip>		
+		<zip destfile="${src.dir}/nsi.zip" >
+			<fileset dir="${pdfsam.dir}">
+					<include name="**/*.nsi"/>
+			</fileset>
+	    </zip>				
 	  </target>
+	
+	<!-- creates a zip archive containing all the source packages -->
+	<target name="mainZipPackage" depends="zipSources" description="generate main sources zip package" >
+		<zip destfile="${src.dir}/${pdfsam.jar.name}-${pdfsam.jar.version}-out-src.zip">
+			<fileset dir="${src.dir}">
+				<include name="**/${pdfsam.jar.name}-${pdfsam.jar.version}-src.zip"/>
+				<include name="**/${split.jar.name}-${split.jar.version}-src.zip"/>
+				<include name="**/${merge.jar.name}-${merge.jar.version}-src.zip"/>
+				<include name="**/${console.jar.name}-${console.jar.version}-src.zip"/>
+				<include name="**/launcher-src.zip"/>
+				<include name="**/nsi.zip"/>
+			</fileset>
+		</zip>		
+	</target>
+
 </project>
