@@ -1,26 +1,28 @@
 Application: PDF Split and Merge
 
-Version: 0.6 sr 3
+Version: 0.7 beta 1
 
 Author: Andrea Vacondio <andrea.vacondio@gmail.com>
 
 License: GPL
 
 Plugins included:
-	-pdfsam-merge-0.4.6 *
-	-pdfsam-split-0.2.7 *
+	-pdfsam-merge-0.4.9 *
+	-pdfsam-split-0.3.0 *
 
 Linked libraries:
-	-itext-1.4.8
+	-itext-2.0.2
 	-jcmdline-1.0.3
 	-looks-2.1.1
-	-pdfsam-console-0.5.4 *
+	-dom4j-1.6.1
+	-jaxen-1.1
+	-pdfsam-console-0.7.0 *
 	-pdfsam-langpack *
 	
 Note: This version of PDF Split and Merge comes with ABSOLUTELY NO WARRANTY. Read the file license.txt for details.
 
-Installation: Unzip the archive into a directory. Double click pdfsam-0.6sr3.jar or open a console and type the command
-"java -jar /pathwhereyouunzipped/pdfsam-0.6sr3.jar"
+Installation: Unzip the archive into a directory. Double click pdfsam-0.7b1.jar or open a console and type the command
+"java -jar /pathwhereyouunzipped/pdfsam-0.7b1.jar"
 
 Installation Win32: Download the Win32 installer and follow the instructions.
 
